[project]
name = "x2raindrop-cli"
version = "1.0.0"
description = "CLI tool to sync X (Twitter) Bookmarks to Raindrop.io"
authors = [
    {name = "Lukas Wolfsteiner",email = "lukas@wolfsteiner.media"}
]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["twitter", "x", "raindrop", "bookmarks", "sync", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Utilities",
]
dependencies = [
    "xdk>=0.5.0",
    "python-raindropio>=0.0.4",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "tomli-w>=1.0.0",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/dotWee/x2raindrop-cli"
Repository = "https://github.com/dotWee/x2raindrop-cli"
Issues = "https://github.com/dotWee/x2raindrop-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-requests>=2.32.0",
]

[project.scripts]
x2raindrop = "x2raindrop_cli.cli:app"

[tool.poetry]
packages = [{include = "x2raindrop_cli", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=5.0.0"
pytest-mock = ">=3.14.0"
pytest-asyncio = ">=0.23.0"
ruff = ">=0.5.0"
mypy = ">=1.10.0"
types-requests = ">=2.32.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
# Python version is inferred from requires-python in [project]
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["x2raindrop_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--cov=x2raindrop_cli",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v",
]

[tool.coverage.run]
source = ["src/x2raindrop_cli"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "raindropio.*",
    "xdk.*",
]
ignore_missing_imports = true
