[project]
name = "x2raindrop-cli"
version = "1.0.2"
description = "CLI tool to sync X (Twitter) Bookmarks to Raindrop.io"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
authors = [{ name = "Lukas Wolfsteiner", email = "lukas@wolfsteiner.media" }]
keywords = ["bookmarks", "cli", "raindrop", "sync", "twitter", "x"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: Utilities",
]
dependencies = [
  "httpx>=0.28.1",
  "pydantic>=2.13.3",
  "pydantic-settings>=2.14.0",
  "python-dotenv>=1.2.2",
  "python-raindropio>=0.0.4",
  "rich>=15.0.0",
  "structlog>=25.5.0",
  "tomli-w>=1.2.0",
  "typer>=0.24.1",
  "xdk>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/dotWee/x2raindrop-cli"
Issues = "https://github.com/dotWee/x2raindrop-cli/issues"
Repository = "https://github.com/dotWee/x2raindrop-cli"

[project.scripts]
x2raindrop = "x2raindrop_cli.cli:app"

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "ruff>=0.15.11",
  "types-requests>=2.33.0.20260408",
  "ty>=0.0.32",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["src/x2raindrop_cli"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
packages = ["src/x2raindrop_cli"]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
possibly-unresolved-reference = "warn"

[tool.ty.terminal]
error-on-warning = true

[tool.pytest]
addopts = [
  "--cov-report=html",
  "--cov-report=term-missing",
  "--cov=x2raindrop_cli",
  "-v",
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
# Python version is inferred from requires-python in [project]
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG",  # flake8-unused-arguments
  "SIM",  # flake8-simplify
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["x2raindrop_cli"]
